- implemented ModSpellHitChance, ModCritHealValuePct, ModSpellPowerByAPPct, ModDamageDoneVersusCreatureType, ModCritHealValuePct, Avoidance effects
- to test: PaladinHolySacredCleansing, PaladinProtectionTouchedByTheLight, PaladinHolyJudgementsOfThePure
- moved spell-related events to Spell