@@ -192,7 +192,7 @@ namespace WCell.Constants.Spells
 		ModIncreaseHealthPercent = 133,
 		ModManaRegenInterrupt = 134,
 		ModHealingDone = 135,
-		ModHealingTaken = 136,
+		ModHealingDonePct = 136,
 		ModTotalStatPercent = 137,
 		ModHaste = 138,
 		ForceReaction = 139,
@@ -263,8 +263,8 @@ namespace WCell.Constants.Spells
 		ModPartySpeed = 171,
 		ModPartySpeedMounted = 172,
 		Unused_AllowChampionSpells = 173,
-		ModSpellDamageByPercentOfSpirit = 174,
-		ModSpellHealingByPercentOfSpirit = 175,
+		ModSpellDamageByPercentOfStat = 174,
+		ModSpellHealingByPercentOfStat = 175,
 		SpiritOfRedemption = 176,
 		AoeCharm = 177,
 		ModDebuffResistancePercent = 178,
