@@ -209,9 +209,9 @@ namespace WCell.RealmServer.Entities
 		/// <summary>
 		/// Adds damage mods to the given AttackAction
 		/// </summary>
-		public virtual int AddHealingMods(int dmg, SpellEffect effect, DamageSchool school)
+		public virtual int AddHealingMods(int healValue, SpellEffect effect, DamageSchool school)
 		{
-			return dmg;
+			return healValue;
 		}
 
 		/// <summary>
